<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#737373">

    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_navigation_home_title"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/tracker_navigation"
        android:icon="@drawable/ic_activity"
        android:title="@string/bottom_navigation_tracker_title"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/about_navigation"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_navigation_about_title"
        app:cnb_iconColor="@color/colorPrimary"/>

</menu>