<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PencegahanActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/image_pencegahan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_pencegahan_1"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pencegahan_desc_1"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_pencegahan_2"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_text_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pencegahan_desc_2"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_text_color"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>